# fastapi_getstarted

./: .coveragerc  .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.dev.yaml  docker-compose.test-n2n.ci.yaml  docker-compose.test.ci.yaml  docker-compose.test.dev.yaml  docker-compose.test.e2e.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  sonar-gitlab-project.properties  sonar-project.properties  tox.ini
.github/workflows/: build.yaml  end_to_end.yaml  linter.yaml  sonar.yaml  tests.yaml
dockerfiles/: .dockerignore  Dockerfile  Dockerfile.tests  nginx.Dockerfile  playwright.Dockerfile  playwright.Dockerfile.dockerignore  redis.Dockerfile  tests.Dockerfile  tests.Dockerfile.dockerignore
envs.example/dev/: .env
envs.example/prod/: .env
envs.example/test/: .env
nginx/: default.conf.template
redis/: redis.conf.example
src/: alembic.ini  main.py  manage.py  routers.py
src/alembic/: env.py
src/alembic/versions/: 464fdae252ea_initial_migration.py
src/apps/: __init__.py  fakers.py  models_metadata.py
src/apps/authentication/: routers.py  utils.py  web.py
src/apps/authorization/: routers.py
src/apps/chat/: routers.py  web.py
src/apps/hero/: __init__.py  faker.py  routers.py
src/apps/user/: routers.py
src/commands/: cli.py
src/configs/: __init__.py  postgres_configs.py
src/core/: lifespan.py
src/core/auth/: backend.py  forms.py  types.py  utils.py
src/core/commands/: cli.py
src/core/db/: __init__.py  base_models.py  create_heroes.py  dependency.py  manager.py  mixins.py  models.py  query.py  session.py  utils.py
src/core/file_manager/: __init__.py  yaml.py
src/core/middlewares/: __init__.py  auth.py  cors.py  session.py
src/core/models/: utils.py
src/core/monitoring/: sentry.py
src/core/openapi/: custom.py
src/core/routers/: __init__.py  default.py  dependencies.py  register.py
src/core/security/: csrf.py
src/core/services/: celery.py
src/core/tasks/: __init__.py  basic.py  exceptions.py  fixtures.py  user.py
src/core/templating/: exceptions.py  utils.py
src/core/test/: async_case.py  async_case_celery.py  client.py  runner.py
src/core/testing/: async_case.py  client.py
src/core/unittest/: async_case.py  client.py
src/migrations/: env.py
src/migrations/sql/: utils.py
src/migrations/versions/: 064d5a0c91a7_add_chatroom_chatmessage_models.py  10d8113f2825_add_permission_group_tables.py  17f6f1356a61_create_user_table.py  1dc2007bee4a_add_chat_models_chatroom_chatmessage.py  1dca837c9f4b_add_chat_models_chatroom_chatmessage.py  20055947a674_add_user_status_field.py  (+32 more)
src/models/: __init__.py  base.py  items.py
src/scripts/: entrypoint-beat.sh  entrypoint-celery.sh  entrypoint-redis.sh  entrypoint.dev.sh  entrypoint.sh  local_server.sh  prepare_tests.sh
src/services/: __init__.py  db.py
src/settings/: __init__.py  _base.py  app.py  constants.py  csrf.py  database.py  entity.py  generic.py  secrets.py  settings.py
src/tests/: base.py  test_default_router.py  test_main.py
(+234 files in other folders)
