[project]
name = "getstarted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "celery[redis]>=5.4.0",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "sqlmodel>=0.0.22",
    "syncpg>=1.1.3",
    "trio>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.uv]
default-groups = ["dev"]

[tool.pycln]
all = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
