[project]
name = "getstarted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "billiard>=4.2.1",
    "broadcaster>=0.3.1",
    "celery-redbeat>=2.3.2",
    "celery[redis]>=5.4.0",
    "cryptography>=45.0.2",
    "fastapi-csrf-protect>=1.0.3",
    "fastapi-pagination>=0.13.3",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jinja2-simple-tags>=0.6.1",
    "kombu>=5.5.2",
    "polars>=1.26.0",
    "prometheus-client>=0.22.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-httpx>=0.35.0",
    "pytest-xdist[psutil]>=3.8.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sentry-sdk[fastapi]>=2.24.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "sqlmodel>=0.0.22",
    "syncpg>=1.1.3",
    "trio>=0.28.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-playwright-asyncio>=0.7.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pycln]
all = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
